fix: remove overflow: visible to enable scrolling

--- a/src/components/Dashboard/styles/DashboardContainer.module.css
+++ b/src/components/Dashboard/styles/DashboardContainer.module.css
@@ -6,12 +6,6 @@
     overflow: auto;
 }
 
-@media only screen and (max-height: 480px) {
-    .container {
-        overflow: visible;
-    }
-}
-
 @media only screen and (max-height: 480px), only screen and (max-width: 480px) {
     .covered {
         overflow: hidden;
